:bug: fix: исправить значение gap#29

--- a/css/blocks/info-element/info-element.css
+++ b/css/blocks/info-element/info-element.css
@@ -1,6 +1,6 @@
 .info-element {
   display: flex;
-  gap: 10px;
+  gap: 8px;
   align-items: flex-start;
   color: var(--color-text-dark);
 }
